# example-python-celery

./: README.rst  pyproject.toml
src/: app.py  task.py
